# bosun

./: .gitignore  CHANGELOG.md  Cargo.toml  EMBEDDED_TERMINAL_FEASIBILITY.md  LICENSE  Makefile  PLAN_2_0.md  README.md  RESEARCH_2_0.md  decision.md
.github/workflows/: ci.yml  release.yml
examples/: spike_term.rs
scripts/: gen_opencode_tdf.py
src/: app.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  sidebar.rs  terminal_query.rs
src/actors/: input_actor.rs  mod.rs  poller.rs  tmux_actor.rs
src/commands/: editor.rs  mod.rs  release_notes.rs  update.rs
src/store/: mod.rs  recents.rs
src/tmux/: attach.rs  client.rs  control.rs  control_client.rs  mod.rs  parse.rs  session.rs  status_bar.rs
src/tmux/detector/: claude.rs  codex.rs  generic.rs  mod.rs
src/ui/: banner.rs  embed_terminal.rs  key_encode.rs  layout.rs  mod.rs  mouse_encode.rs  preview.rs  section_preview.rs  session_list.rs  statusbar.rs  tab_strip.rs  theme.rs
src/ui/modal/: confirm.rs  help.rs  mod.rs  new_session.rs  quickjump.rs  recents.rs  rename.rs  section.rs  theme.rs
src/util/: collision.rs  hysteresis.rs  mod.rs
tests/: integration_attach_binding.rs  integration_create_session.rs  integration_lifecycle.rs  integration_status_bar.rs  integration_worktree_sessions.rs  smoke_real_tmux.rs  snapshot_session_list.rs
tests/snapshots/: snapshot_session_list__create_in_progress_statusbar.snap  snapshot_session_list__empty_session_list.snap  snapshot_session_list__kill_in_progress_row.snap  snapshot_session_list__mixed_statuses.snap  snapshot_session_list__sections_group_sessions.snap  snapshot_session_list__three_sessions_middle_selected.snap  snapshot_session_list__warning_in_statusbar.snap
themes/: ayu-light.toml  ayu-mirage.toml  catppuccin-mocha.toml  dracula.toml  github-dark.toml  github-light.toml  gruvbox-dark.toml  nord.toml  one-dark-pro.toml  one-light.toml  opencode.toml  quiet-light.toml  rose-pine.toml  solarized-light.toml  tokyonight.toml
themes/banners/: opencode.tdf
