[package]
name = "bosun"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
description = "Tmux-native orchestrator for AI agent sessions"
license = "MIT"
repository = "https://github.com/yetidevworks/bosun"
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "process", "sync", "time", "signal", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
ansi-to-tui = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.4"

[dev-dependencies]
insta = "1.47"

[features]
default = []
# Gates integration tests that spawn a real tmux server. Enable locally or in
# a CI job that has tmux installed: `cargo test --features tmux-it`.
tmux-it = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1  # Fast enough dev builds, much snappier TUI than opt-level=0.
