[package]
name = "bosun-tmux"
version = "2.0.10"
edition = "2021"
rust-version = "1.80"
authors = ["Andy Miller <hello@skulkworks.dev>"]
description = "Tmux-native orchestrator for AI agent sessions"
license = "MIT"
repository = "https://github.com/yetidevworks/bosun"
homepage = "https://github.com/yetidevworks/bosun"
readme = "README.md"
keywords = ["tmux", "tui", "ai", "claude", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "bosun"
path = "src/lib.rs"

[[bin]]
name = "bosun"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "process", "sync", "time", "signal", "io-util"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
ansi-to-tui = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.4"
retrofont = "0.2"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
# 2.0 embedded-terminal stack. tui-term 0.3.x targets ratatui-core 0.1 /
# ratatui-widgets 0.3, the widget surface ratatui 0.30 re-exports. The
# vt100 repo has been quiet but tui-term actively tracks it, and the dep is
# small enough to vendor in a one-file swap if maintenance ever stops. The
# fallback if focus-mode hits vt100's mouse / HVP gaps is alacritty_terminal.
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"

# Unix `poll`/`read` for the timed outer-terminal color probe at
# startup (OSC 10/11/12). Already in the tree transitively; pinned
# direct so the probe code can call it.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
insta = "1.47"

[features]
default = []
# Gates integration tests that spawn a real tmux server. Enable locally or in
# a CI job that has tmux installed: `cargo test --features tmux-it`.
tmux-it = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Same codegen as release but preserves debug symbols so tools like
# `sample` / `atos` / `lldb` can resolve stack frames. Use this when
# chasing a bug that only repros under release timing.
[profile.release-debug]
inherits = "release"
strip = "none"
debug = true

[profile.dev]
opt-level = 1  # Fast enough dev builds, much snappier TUI than opt-level=0.
